# validate

./: .gitignore  Gemfile  Guardfile  validate.cabal
spec/Form/: UserSpec.hs
src/: main.hs
src/Form/: User.hs
src/Lib/: Coerce.hs  Deal.hs  Form.hs  Valid.hs
src/Model/: User.hs
src/Module/: Form.hs
test/Form/: UserSpec.hs
test/Lib/: DealSpec.hs  FormSpec.hs
