name:                validate
version:             0.1.0.0
synopsis:            model validation
homepage:            https://github.com/matsumonkie/validate
author:              iori <matsuhar@gmail.com>
build-type:          Simple
cabal-version:       >=1.22

library
  default-language:  Haskell2010
  hs-source-dirs:    src
  exposed-modules:
    Module.Form
    , Form.User
    , Model.User
    , Lib.Coerce
    , Lib.Deal
    , Lib.Form
    , Lib.Valid
  build-depends:     base ==4.6.*

test-suite spec
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Spec.hs
  build-depends:
    base == 4.6.*
    , hspec == 2.2.*
    , hspec-expectations == 0.7.*
    , validate